Parent controller yaratildi